# restaurant-system

./: DB.md  LICENSE  README.md  models.dot  pyproject.toml
core/: admin.py  context_processors.py  mixins.py  models.py  urls.py  views.py
core/management/commands/: populate_db.py  setup_roles.py
core/migrations/: 0001_initial.py  0002_alter_businessinfo_options.py
core/templates/core/: dashboard.html  day_menu.html  home.html  login.html  tables_status.html
core/templatetags/: group_tags.py
expenses/: admin.py  forms.py  models.py  urls.py  views.py
expenses/migrations/: 0001_initial.py  0002_alter_expense_amount_expense_expense_amount_gte_0.py
expenses/templates/expenses/: expense_confirm_delete.html  expense_detail.html  expense_form.html  (+1 more)
menu/: admin.py  forms.py  models.py  urls.py  views.py
menu/migrations/: 0001_initial.py  0002_dailymenu_alter_menuitem_price_and_more.py  0003_alter_menuitem_options.py
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_orderitem_quantity_alter_orderitem_unit_price_and_more.py
project/: settings.py  urls.py
reports/: urls.py  views.py
sales/: admin.py  models.py  urls.py  views.py
sales/migrations/: 0001_initial.py  0002_alter_sale_amount_sale_sale_amount_gte_0.py
static/css/: styles.css
static/js/: main.js
tables/: admin.py  models.py  urls.py  views.py
tables/migrations/: 0001_initial.py  0002_alter_table_seats_alter_table_table_number_and_more.py
templates/: base.html
templates/partials/: alert_messages.html  footer.html  navbar.html
(+40 files in other folders)
