[project]
name = "restaurant-system"
version = "0.1.0"
description = "A restaurant system"
authors = [
    {name = "iBrokeTheCode",email = "alexrtc.dev@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
django-extensions = "^4.1"
django-debug-toolbar = "^5.1.0"

